fixing validations
Signed-off-by: SHEKHAR SAXENA <shekhar.saxena@ibm.com>